--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Carousel Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
+    <title>Data Mining Final Project</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-
-    <!-- Custom styles for this template -->
     <link href="./css/carousel.css" rel="stylesheet">
+    <link href="./css/dashboard.css" rel="stylesheet">
+    <link href="./css/custom.css" rel="stylesheet">
   </head>
   <body>
-
     <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Carousel</a>
+      <a class="navbar-brand" href="#">Titanic</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -34,223 +27,197 @@
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
         </ul>
-        <form class="form-inline mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     </nav>
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="10000">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block text-left">
-              <h1>Example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption d-none d-md-block text-right">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>The RMS Titanic</h1>
+              <p>This project explores the data of the passengers, and builds a predictive model whose goal is to most accurately predict the outcome of survival based on the known data.</p>
             </div>
           </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
 
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
     <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
           <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+          <h2>Descriptions</h2>
+          <p>Take a journey through the data of the RMS Titanic.</p>
+          <p><a class="btn btn-secondary" href="#data-description" role="button">View More &raquo;</a></p>
+        </div>
         <div class="col-lg-4">
           <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+          <h2>Preprocessing</h2>
+          <p>How the data was processed to be presented to various models.</p>
+          <p><a class="btn btn-secondary" href="#data-preprocessing" role="button">View details &raquo;</a></p>
+        </div>
         <div class="col-lg-4">
           <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
+          <h2>Results</h2>
+          <p>However when combining these two features, we see that there is a more clear picture of how these two features predict survival.</p>
+          <p><a class="btn btn-secondary" href="#results" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
 
+      <a name="data-description"></a>
+      <hr class="featurette-divider">
 
-      <!-- START THE FEATURETTES -->
+      <div class="row featurette">
+        <div class="col-md-12">
+          <h2 class="featurette-heading">Data Descriptions</h2>
+          <p class="lead">
+            <div class="table-responsive">
+              <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Feature</th>
+                  <th>Data Type</th>
+                  <th>Description</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>PassengerId</td>
+                  <td>Unique</td>
+                  <td>The ID of the passenger</td>
+                </tr>
+                <tr>
+                  <td>Survived</td>
+                  <td>Binary</td>
+                  <td>Survival (0 = No, 1 = Yes)</td>
+                </tr>
+                <tr>
+                  <td>Pclass</td>
+                  <td>Ordinal</td>
+                  <td>Class of the Ticket (1 = 1st class (upper), 2 = 2nd class (middle), 3 = 3rd class (lower))</td>
+                </tr>
+                <tr>
+                  <td>Name</td>
+                  <td>Unique</td>
+                  <td>Name of the passenger</td>
+                </tr>
+                <tr>
+                  <td>Sex</td>
+                  <td>Binary</td>
+                  <td>Sex of the passenger (female, male)</td>
+                </tr>
+                <tr>
+                  <td>Age</td>
+                  <td>Continuous</td>
+                  <td>Age of the passenger in years</td>
+                </tr>
+                <tr>
+                  <td>SibSp</td>
+                  <td>Discrete</td>
+                  <td>Number of siblings and spouses on the Titanic</td>
+                </tr>
+                <tr>
+                  <td>Parch</td>
+                  <td>Discrete</td>
+                  <td>Number of parents and children on the Titanic</td>
+                </tr>
+                <tr>
+                  <td>Ticket</td>
+                  <td>Discrete</td>
+                  <td>Ticket Number</td>
+                </tr>
+                <tr>
+                  <td>Fare</td>
+                  <td>Continuous</td>
+                  <td>Cost of the ticket</td>
+                </tr>
+                <tr>
+                  <td>Cabin</td>
+                  <td>Discrete</td>
+                  <td>Cabin Number</td>
+                </tr>
+                <tr>
+                  <td>Embarked</td>
+                  <td>Nominal</td>
+                  <td>Port the passenger embarked from.</td>
+                </tr>
+              </tbody>
+              </table>
+            </div>
+          </p>
+        </div>
+      </div>
 
+      <a name="data-preprocessing"></a>
+      <hr class="featurette-subdivider">
+
+      <div class="row featurette">
+        <div class="col-md-12">
+          <h2 class="featurette-heading">Data Processing</h2>
+          <hr class="featurette-subdivider">
+          <h3>Feature Reconstruction</h3>
+          <p class="lead">
+            We take important features that are incomplete, and use various methods to reconstruct the missing fields in the most accurate way possible.
+            <p><a class="btn btn-secondary" href="#data-preprocessing" role="button">Find Out How &raquo;</a></p>
+          </p>
+          <hr class="featurette-subdivider">
+          <h3>Feature Generation</h3>
+          <p class="lead">
+            We take related features and combine them in various ways to create a new field.
+            <p><a class="btn btn-secondary" href="#data-preprocessing" role="button">Learn More &raquo;</a></p>
+          </p>
+          <hr class="featurette-subdivider">
+          <h3>Feature Transformation</h3>
+          <p class="lead">
+            We take many features and transform them into more managable representations for the classifiers.
+            <p><a class="btn btn-secondary" href="#data-preprocessing" role="button">See the Change &raquo;</a></p>
+          </p>
+          <hr class="featurette-subdivider">
+          <h3>Feature Reduction</h3>
+          <p class="lead">
+            Finally, we remove features from the dataset before using the data in the classifiers.
+            <p><a class="btn btn-secondary" href="#data-preprocessing" role="button">See What's Left &raquo;</a></p>
+          </p>
+        </div>
+    <!--     <div class="col-md-5 pull-md-7">
+          
+        </div> -->
+      </div>
+
+      <a name="results"></a>
       <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">All Features</h2>
-          <p class="lead"></p>
+          <h2 class="featurette-heading">Results<span class="text-muted"></span></h2>
+          <p class="lead">
+            And the winner is...Decision Tree with 90.57% training accuracy!
+          </p>
+          <p>However Random forest with a 89.9% training accuracy score was chosen, since this classifier is a more generalized approach to the Decision Tree.</p>
+          <p><a class="btn btn-secondary" href="#data-preprocessing" role="button">See the Methdology &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#data-preprocessing" role="button">See the Data &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <svg id="svg1" width="500" height="400"></svg>
+          <div id="model-chart"></div>
         </div>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-md-7 push-md-5">
-          <h2 class="featurette-heading">Sex Feature</h2>
-          <p class="lead"></p>
+      <footer class="text-muted">
+        <div class="container">
+          <p class="float-right"><a href="#">Back to top</a></p>
+          <p>Matt Thomson &middot; <a href="#" target="_blank">Project</a> &middot; <a href="https://github.com/redice44" target="_blank">Github</a> &middot; <a href="https://twitter.com/RedIce44" target="_blank">Twitter</a></p>
         </div>
-        <div class="col-md-5 pull-md-7">
-          <svg id="svg2" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Class Feature<span class="text-muted"></span></h2>
-          <p class="lead"></p>
-        </div>
-        <div class="col-md-5">
-          <svg id="svg3" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 push-md-5">
-          <h2 class="featurette-heading">Age Feature</h2>
-          <p class="lead"></p>
-        </div>
-        <div class="col-md-5 pull-md-7">
-          <svg id="svg4" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Sex and Class Combined Feature<span class="text-muted"></span></h2>
-          <p class="lead"></p>
-        </div>
-        <div class="col-md-5">
-          <svg id="svg5" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 push-md-5">
-          <h2 class="featurette-heading">Fare Feature</h2>
-          <p class="lead"></p>
-        </div>
-        <div class="col-md-5 pull-md-7">
-          <svg id="svg6" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Family Size Feature<span class="text-muted"></span></h2>
-          <p class="lead"></p>
-        </div>
-        <div class="col-md-5">
-          <svg id="svg7" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 push-md-5">
-          <h2 class="featurette-heading">Embarked Feature</h2>
-          <p class="lead"></p>
-        </div>
-        <div class="col-md-5 pull-md-7">
-          <svg id="svg8" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Title Feature<span class="text-muted"></span></h2>
-          <p class="lead"></p>
-        </div>
-        <div class="col-md-5">
-          <svg id="svg-9" width="500" height="400"></svg>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-      <!-- /END THE FEATURETTES -->
-
-
-      <!-- FOOTER -->
-      <footer>
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    </div>
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/tether.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/d3.min.js"></script>
     <script src="./js/data.js"></script>
-
   </body>
   </body>
 </html>
